Fix Gradle scripts after rebase